@@ -1,1 +1,2 @@
 Vance Shipley <vances@motivity.ca>
+Alois Vitasek <avitaek@seznam.cz>
